SOURCE/objects/Travel__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_monthly_payment__c</fullName>
        <formula>Total_Cost__c - Amount_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount for monthly payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Programs__c</fullName>
        <label>Approved Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infinite Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>I_am_travelling_primarily_via__c</fullName>
        <inlineHelpText>I am travelling primarily via</inlineHelpText>
        <label>Travel Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airplane</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Uber</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Transport</fullName>
                </value>
                <value>
                    <fullName>Pick-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itinerary_Number__c</fullName>
        <label>Itinerary Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_payments__c</fullName>
        <formula>( Total_Cost__c + (( Total_Cost__c * 3)/100))/20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost with Interest divided by $ 20 per month</inlineHelpText>
        <label>Number of payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Travels</relationshipLabel>
        <relationshipName>Travels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Info__c</fullName>
        <label>Travel Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Phone_Number__c</fullName>
        <label>Travel Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Travel_Status__c</fullName>
        <label>Travel Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Itinerary</fullName>
                    <default>true</default>
                    <label>New Itinerary</label>
                </value>
                <value>
                    <fullName>Travel Booked</fullName>
                </value>
                <value>
                    <fullName>Made Travel Arrangement</fullName>
                </value>
                <value>
                    <fullName>Confirmed Travel Arrangements</fullName>
                </value>
                <value>
                    <fullName>Missed Travel Arrangement</fullName>
                </value>
                <value>
                    <fullName>Re-booked Travel Arrangement</fullName>
                </value>
                <value>
                    <fullName>Confirmed Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Travel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>I_am_travelling_primarily_via__c</columns>
        <columns>Patient_Name__c</columns>
        <columns>Arrival_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Confirmed_Pickup</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed Pickup</value>
        </filters>
        <label>Confirmed Pickup</label>
    </listViews>
    <listViews>
        <fullName>Confirmed_Travel_Arrangement</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed Travel Arrangements</value>
        </filters>
        <label>Confirmed Travel Arrangement</label>
    </listViews>
    <listViews>
        <fullName>Made_Travel_Arrangement</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Made Travel Arrangement</value>
        </filters>
        <label>Made Travel Arrangement</label>
    </listViews>
    <listViews>
        <fullName>Missed_Travel_Arrangement</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Missed Travel Arrangement</value>
        </filters>
        <label>Missed Travel Arrangement</label>
    </listViews>
    <listViews>
        <fullName>New_Itinerary</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>New Itinerary</value>
        </filters>
        <label>New Itinerary</label>
    </listViews>
    <listViews>
        <fullName>Re_Booked_Travel_Arrangement</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Re-booked Travel Arrangement</value>
        </filters>
        <label>Re-Booked Travel Arrangement</label>
    </listViews>
    <listViews>
        <fullName>Travel_Booked</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Travel_Status__c</field>
            <operation>equals</operation>
            <value>Travel Booked</value>
        </filters>
        <label>Travel Booked</label>
    </listViews>
    <nameField>
        <displayFormat>Travel-{0000}</displayFormat>
        <label>Travel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>